overflow x on phone fixed

--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ textarea:focus {
   
     body{
    
-        padding: 20px;
+        padding: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -376,7 +376,8 @@ textarea:focus {
     }
 
     main{
-        width: 90%;
+        max-width: 90%;
+        overflow-x: hidden;
     }
     
 
